objects/Account.object
<CustomObject>
    <fields>
        <fullName>Info_for_PR_Interesting__c</fullName>
        <label>Info for PR - Interesting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interesting_Story_Topic__c</fullName>
        <label>Interesting Story/Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Experience_Type__c</fullName>
        <label>International Experience Type</label>
        <picklist>
            <controllingField>International_Experience__c</controllingField>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both - ExIm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via agent - Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via agent - Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Experience__c</fullName>
        <label>International Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SME_Customer__c</fullName>
        <formula>IF(
CASE(Primary_Segment_Code__c, 
&quot;LM&quot;, 1, &quot;LR&quot;, 1, &quot;SM&quot;, 1, &quot;SR&quot;, 1, &quot;UM&quot;, 1, &quot;UR&quot;, 1, 
0)=1,
TRUE,FALSE)</formula>
        <label>Is SME Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssuedAndPaidUp__c</fullName>
        <description>Equity ส่วนของผู้ถือหุ้น - ทุนที่ออกและชำระแล้ว</description>
        <label>Issued and Paid-Up</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Knowledge_about_Business__c</fullName>
        <label>Knowledge about Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_BG_Main_Bank__c</fullName>
        <label>L/I (BG) - Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIMBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LHBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LI_BG_Other_Reason_for_not_use_KBank__c</fullName>
        <label>L/I (BG)- Other Reason for not use KBank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_BG_Other_Reason_for_using_Main__c</fullName>
        <label>L/I (BG) - Other Reason for using Main</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_BG_Other_Reason_for_using_Second__c</fullName>
        <label>L/I (BG) - Other Reason for using Second</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_BG_Reason_for_not_use_KBank__c</fullName>
        <label>L/I (BG) - Reason for not use KBank</label>
        <picklist>
            <picklistValues>
                <fullName>ผลิตภัณฑ์ไม่ตรงกับความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ได้วงเงินน้อย แตกต่างจากจำนวนที่ต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดปัญหาเรื่องหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อัตราค่าธรรมเนียมและดอกเบี้ยแพง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุมัติช้า ไม่ทันต่อความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/Sale ไม่สามารถให้คำแนะนำ/แก้ปัญหาได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดเงื่อนไขสินเชื่อตามบริษัทในเครือ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใช้ตั้งแต่รุ่นพ่อแม่ / ตั้งแต่เปิดกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LI_BG_Reason_for_using_Main_Bank__c</fullName>
        <label>L/I (BG) - Reason for using Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>ผลิตภัณฑ์ตรงกับความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในจำนวนวงเงินที่ได้รับ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พอใจการประเมินหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในอัตราค่าธรรมเนียมและดอกเบี้ย</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุมัติรวดเร็วได้ทันตามความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/Sale สามารถให้คำแนะนำ/แก้ปัญหาให้ได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดเงื่อนไขสินเชื่อตามบริษัทในเครือ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใช้ตั้งแต่รุ่นพ่อแม่ / ตั้งแต่เปิดกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LI_BG_Reason_for_using_Second_Bank__c</fullName>
        <label>L/I (BG) - Reason for  using Second Bank</label>
        <picklist>
            <picklistValues>
                <fullName>ผลิตภัณฑ์ตรงกับความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในจำนวนวงเงินที่ได้รับ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พอใจการประเมินหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในอัตราค่าธรรมเนียมและดอกเบี้ย</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุมัติรวดเร็วได้ทันตามความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/Sale สามารถให้คำแนะนำ/แก้ปัญหาให้ได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดเงื่อนไขสินเชื่อตามบริษัทในเครือ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใช้ตั้งแต่รุ่นพ่อแม่ / ตั้งแต่เปิดกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LI_BG_Second_Bank__c</fullName>
        <label>L/I (BG) - Second Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIMBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LHBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_CallReprt_Opty_Updated_Date__c</fullName>
        <description>This field is to be update by Trigger based on Last Opty Updated Date and Last Call Plan/Call Report Updated Date.  It is used by time-based workflow to release ownership for no activity.</description>
        <label>Last CallReprt/Opty Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Setup_By__c</fullName>
        <label>Last Setup By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Setup_Date__c</fullName>
        <label>Last Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Visited_By__c</fullName>
        <label>Last Visited By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Visited_Date_Is_Null__c</fullName>
        <formula>NOT(LEN(TEXT(Last_Visited_Date__c))&gt;0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Visited Date Is Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Visited_Date__c</fullName>
        <label>Last Visited Date</label>
        <summarizedField>Call_Report__c.Actual_Visit_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Call_Report__c.Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Call_Report__c.CIS_ID__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead_To_Do__c</fullName>
        <label>Lead To Do</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_To_Inform__c</fullName>
        <label>Campaign/Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_for_Sales__c</fullName>
        <label>Lead for Sales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LiabilitiesAccountPayable__c</fullName>
        <description>เจ้าหนี้การค้า</description>
        <label>Liabilities - Account Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesCurrentLiability__c</fullName>
        <description>รวมหนี้สินหมุนเวียน</description>
        <label>Liabilities - Current Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesEtc2__c</fullName>
        <description>อื่นๆ</description>
        <label>Liabilities - Etc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesEtc__c</fullName>
        <description>อื่นๆ</description>
        <label>Liabilities - Etc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesLongTermLoan__c</fullName>
        <description>เงินกู้ยืมระยะยาว</description>
        <label>Liabilities - Long-Term Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesNonCurrentLiabilites__c</fullName>
        <description>รวมหนี้สินไม่หมุนเวียน</description>
        <label>Liabilities - Non-Current Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesOD__c</fullName>
        <description>เงินเบิกเกินบัญชีและเงินกู้ยืม</description>
        <label>Liabilities - O/D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesShortTermLoan__c</fullName>
        <description>เงินกู้ยืมระยะสั้น</description>
        <label>Liabilities - Short-Term Loan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiabilitiesTotalLiability__c</fullName>
        <description>รวมหนี้สิน</description>
        <label>Liabilities - Total Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Main_Bank__c</fullName>
        <label>Loan&amp;OD - Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIMBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LHBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Other_Reason_for_not_use_KBank__c</fullName>
        <label>Loan&amp;OD - Other Reason for not use KBank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Other_Reason_for_using_Main__c</fullName>
        <label>Loan&amp;OD - Other Reason for using Main</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Other_Reason_for_using_Second__c</fullName>
        <label>Loan&amp;OD - Other Reason for using Second</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Reason_for_not_use_KBank__c</fullName>
        <label>Loan&amp;OD - Reason for not use KBank</label>
        <picklist>
            <picklistValues>
                <fullName>ผลิตภัณฑ์ไม่ตรงกับความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ได้วงเงินน้อย แตกต่างจากจำนวนที่ต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดปัญหาเรื่องหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อัตราค่าธรรมเนียมและดอกเบี้ยแพง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุมัติช้า ไม่ทันต่อความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/Sale ไม่สามารถให้คำแนะนำ/แก้ปัญหาได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดเงื่อนไขสินเชื่อตามบริษัทในเครือ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใช้ตั้งแต่รุ่นพ่อแม่ / ตั้งแต่เปิดกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Reason_for_using_Main_Bank__c</fullName>
        <label>Loan&amp;OD - Reason for  using Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>ผลิตภัณฑ์ตรงกับความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในจำนวนวงเงินที่ได้รับ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พอใจการประเมินหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในอัตราค่าธรรมเนียมและดอกเบี้ย</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุมัติรวดเร็วได้ทันตามความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/Sale สามารถให้คำแนะนำ/แก้ปัญหาให้ได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดเงื่อนไขสินเชื่อตามบริษัทในเครือ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใช้ตั้งแต่รุ่นพ่อแม่ / ตั้งแต่เปิดกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Reason_for_using_Second_Bank__c</fullName>
        <label>Loan&amp;OD - Reason for  using Second Bank</label>
        <picklist>
            <picklistValues>
                <fullName>ผลิตภัณฑ์ตรงกับความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในจำนวนวงเงินที่ได้รับ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พอใจการประเมินหลักประกัน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พึงพอใจในอัตราค่าธรรมเนียมและดอกเบี้ย</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อนุมัติรวดเร็วได้ทันตามความต้องการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/Sale สามารถให้คำแนะนำ/แก้ปัญหาให้ได้</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ติดเงื่อนไขสินเชื่อตามบริษัทในเครือ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ใช้ตั้งแต่รุ่นพ่อแม่ / ตั้งแต่เปิดกิจการ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Loan_OD_Second_Bank__c</fullName>
        <label>Loan&amp;OD - Second Bank</label>
        <picklist>
            <picklistValues>
                <fullName>KBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KTB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ธนชาติ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อิสลาม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ออมสิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.เกียรตินาคิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.ก.ส.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXIMBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TISCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LHBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ธ.อ.ส.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBB_Symbol__c</fullName>
        <formula>CASE( TEXT(MBB__c),
&quot;Yes&quot;,  IMAGE(&quot;/resource/check&quot;,&quot;Yes&quot;,18,18),
&quot;No&quot;, IMAGE(&quot;/resource/no&quot;,&quot;No&quot;,18,18),
IMAGE(&quot;/resource/questionmark&quot;,&quot;null&quot;,18,24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBB__c</fullName>
        <label>MBB</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MOB_Symbol__c</fullName>
        <formula>CASE( TEXT( MOB__c ),
&quot;Yes&quot;,  IMAGE(&quot;/resource/check&quot;,&quot;Yes&quot;,18,18),
&quot;No&quot;, IMAGE(&quot;/resource/no&quot;,&quot;No&quot;,18,18),
IMAGE(&quot;/resource/questionmark&quot;,&quot;null&quot;,18,24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOB__c</fullName>
        <label>MOB</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Bank_Symbol__c</fullName>
        <formula>CASE( TEXT(Main_Bank__c),
&quot;Yes&quot;,  IMAGE(&quot;/resource/check&quot;,&quot;Yes&quot;, 18, 18),
&quot;No&quot;, IMAGE(&quot;/resource/no&quot;,&quot;No&quot;, 18, 18),
IMAGE(&quot;/resource/questionmark&quot;,&quot;null&quot;,18 ,24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Bank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Bank__c</fullName>
        <label>Main Bank</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merge_Status_Code__c</fullName>
        <label>Merge Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Status__c</fullName>
        <formula>CASE(Merge_Status_Code__c, &quot;M&quot;, &quot;Merge&quot;, &quot;Not merge&quot;)</formula>
        <label>Merge Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_EN_Prospect__c</fullName>
        <label>Middle Name (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_EN__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;SME_Customer&quot;, 
IMAGE($Label.MashupUrl+Encrypt_Middle_Name_EN__c, &quot; &quot;), Middle_Name_EN_Prospect__c)</formula>
        <label>Middle Name (EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_TH_Prospect__c</fullName>
        <label>Middle Name (TH)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_TH__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;SME_Customer&quot;, 
IMAGE($Label.MashupUrl+Encrypt_Middle_Name_TH__c, &quot; &quot;), Middle_Name_TH_Prospect__c)</formula>
        <label>Middle Name (TH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_2__c</fullName>
        <label>Mobile Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>My_AH_Pool__c</fullName>
        <formula>If ( Owner.AH_RC_Code__c =   $User.AH_RC_Code__c &amp;&amp;  Owner.Profile.Name = &quot;SME-TM&quot;, True,False)</formula>
        <label>My AH Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Customer_SVM__c</fullName>
        <formula>If (Service_RM_Emp_ID__c = $User.Employee_ID__c, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Customer (SVM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Customer__c</fullName>
        <formula>If ( $User.Id =  Owner.Id , True,False)</formula>
        <label>My Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_TM_Pool__c</fullName>
        <formula>If (RC_Code__c =  $User.RC_Code__c &amp;&amp;  Owner.Profile.Name = &quot;SME-TM&quot;, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My TM Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Team__c</fullName>
        <formula>If (RC_Code__c = $User.RC_Code__c, True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NH_Emp_ID__c</fullName>
        <formula>Owner.NH_Employee_ID__c</formula>
        <label>NH Emp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Name__c</fullName>
        <formula>Owner.NH_Name__c</formula>
        <label>NH Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_RC_Code__c</fullName>
        <formula>Owner.NH_RC_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NH RC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH__c</fullName>
        <formula>CASE(Owner.Profile.Name,
&quot;SME-RM&quot;, Owner.Manager.Manager.Manager.UserRole.Name,
&quot;SME-TM&quot;, Owner.Manager.Manager.UserRole.Name,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPL_Symbol__c</fullName>
        <formula>CASE ( TEXT(NPL__c), 
&quot;No&quot;, IMAGE(&quot;/resource/GreenLight&quot;,&quot;No&quot;,20,20), 
&quot;Yes&quot;, IMAGE(&quot;/resource/YellowLight&quot;,&quot;Yes&quot;,20,20), 
IMAGE(&quot;/resource/questionmark&quot;,&quot;null&quot;,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPL__c</fullName>
        <label>NPL</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_EN_Prospect__c</fullName>
        <label>Name (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_EN__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;SME_Customer&quot;, 
IMAGE($Label.MashupUrl+Encrypt_Fullname_EN__c, &quot; &quot;), Name_EN_Prospect__c)</formula>
        <label>Name (EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Report__c</fullName>
        <formula>IF ( RecordType.DeveloperName = &quot;SME_Prospect&quot;, Name,  Name_Surname_TH__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Surname_EN__c</fullName>
        <formula>Name_EN__c</formula>
        <label>Name, Surname (EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Surname_TH__c</fullName>
        <formula>Name_TH__c</formula>
        <label>Name, Surname (TH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_TH__c</fullName>
        <formula>IF(RecordType.DeveloperName = &quot;SME_Customer&quot;, 
IMAGE($Label.MashupUrl+Encrypt_Fullname_TH__c, &quot; &quot;), Name )</formula>
        <label>Name (TH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Name__c</fullName>
        <formula>CASE( Owner.Profile.Name , 
&quot;SME-RM&quot;, Owner.Network_Name__c , 
&quot;SME-TM&quot;, Owner.Network_Name__c , 
&quot;SME-AH&quot;, Owner.Network_Name__c , 
&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Call_Plan_Call_Report__c</fullName>
        <label>Number of Call Plan/Call Report</label>
        <summaryForeignKey>Call_Report__c.CIS_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Customer__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>